# nixsearch-ksv-fork

./: .gitignore  Cargo.toml  GUIDELINES.md  LICENSE  PLAN.md  README.md  deny.toml  flake.nix  nix-search.example.toml  nixsearch.example.toml
.github/workflows/: container.yml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs  output.rs
crates/cli/src/commands/: artifact.rs  config.rs  index.rs  maintenance.rs  mod.rs  search.rs  serve.rs  update.rs
crates/cli/tests/: cli_smoke.rs
crates/config/: Cargo.toml
crates/config/src/: app.rs  lib.rs  maintenance.rs  producer.rs  server.rs  source.rs  tests.rs  validation.rs
crates/core/: Cargo.toml
crates/core/src/: artifact.rs  document.rs  ingest.rs  lib.rs  name.rs  source_link.rs  target.rs
crates/index/: Cargo.toml
crates/index-test-support/: Cargo.toml
crates/index-test-support/src/: lib.rs
crates/index/src/: annotation.rs  atomic_file.rs  generation.rs  generation_validator.rs  integrity.rs  lib.rs  manifest.rs  query.rs  ranking.rs  schema.rs  search.rs  seo.rs  seo_sidecar.rs  store.rs  writer.rs
crates/index/src/store/: atomic.rs  current.rs  integrity.rs  layout.rs  leases.rs  manifest.rs  open.rs  sidecar.rs
crates/index/tests/: search_behavior.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs
crates/ingest/tests/: fixtures.rs
crates/ops/: Cargo.toml
crates/ops/src/: cleanup.rs  consume.rs  generate.rs  lib.rs  lock.rs  produce.rs  seo.rs  spool.rs  targets.rs
crates/ops/src/generation/: documents.rs  index.rs  mod.rs  policy.rs  production.rs  publish.rs
crates/service/: Cargo.toml
crates/service/src/: lib.rs
crates/source/: Cargo.toml
crates/source/src/: artifact.rs  consumer.rs  lib.rs
crates/source/src/producers/: channel.rs  download.rs  eval_modules.rs  existing_file.rs  flake_file.rs  nix.rs  nix_build_options.rs
crates/store/src/: lib.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
crates/web/: Cargo.toml  style.css  test_urls.rs
crates/web/src/: entry.rs  handlers.rs  lib.rs  maintenance.rs  metadata.rs  origin.rs  reconciliation.rs  render_docs.rs  request.rs  robots.rs  scripts.rs  sitemap.rs  source_labels.rs  test_urls.rs  test_urls2.rs  urls.rs
crates/web/src/request/: decode.rs  endpoint.rs  mod.rs  public.rs  state.rs  tests.rs
crates/web/src/scripts/: dialog-reconcile.js  navigation.js
crates/web/src/templates/: detail.rs  entry_article.rs  footer.rs  home.rs  layout.rs  mod.rs  modal.rs  results.rs  search.rs  source_tag.rs
fixtures/eval-modules-flake/: flake.nix
fixtures/search-small/: packages.json
nix/: cargo.nix  container.nix  process-compose.nix
