[workspace]
resolver = "3"
members = [
  "crates/cli",
  "crates/config",
  "crates/core",
  "crates/index",
  "crates/ingest",
  "crates/source",
  "crates/store",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
object_store = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
tantivy = "0.26.1"
tokio = { version = "1", features = [
  "macros",
  "fs",
  "process",
  "rt",
  "rt-multi-thread",
] }
tracing = "0.1"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
hex = "0.4"
sha2 = "0.11"

nix-search-core = { path = "crates/core" }
nix-search-ingest = { path = "crates/ingest" }
nix-search-index = { path = "crates/index" }
nix-search-config = { path = "crates/config" }
nix-search-store = { path = "crates/store" }
nix-search-source = { path = "crates/source" }
