[workspace]
resolver = "3"
members = ["crates/*"]
metadata.crane.name = "nix-search"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
assert_cmd = "2"
axum = "0.8"
brotli = "8"
clap = { version = "4", features = ["derive"] }
datastar = { version = "0.3", features = ["axum"] }
figment = { version = "0.10", features = ["toml", "env"] }
futures-util = "0.3"
object_store = "0.13"
predicates = "3"
reqwest = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
toml = "1"
tantivy = "0.26.1"
tokio = { version = "1", features = [
  "macros",
  "fs",
  "net",
  "process",
  "rt",
  "rt-multi-thread",
  "time",
] }
tracing = "0.1"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
url = "2"
urlencoding = "2"
html-escape = "0.2"
maud = { version = "0.27", features = ["axum"] }
bytes = "1"
camino = { version = "1", features = ["serde1"] }
hex = "0.4"
sha2 = "0.11"

nix-search-core = { path = "crates/core" }
nix-search-ingest = { path = "crates/ingest" }
nix-search-index = { path = "crates/index" }
nix-search-index-test-support = { path = "crates/index-test-support" }
nix-search-config = { path = "crates/config" }
nix-search-store = { path = "crates/store" }
nix-search-source = { path = "crates/source" }
nix-search-web = { path = "crates/web" }
nix-search-ops = { path = "crates/ops" }
nix-search-test-support = { path = "crates/test-support" }
