[workspace]
resolver = "3"
members = ["crates/*"]
metadata.crane.name = "nixsearch"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
assert_cmd = "2"
axum = "0.8"
brotli = "8"
clap = { version = "4", features = ["derive", "env"] }
datastar = { version = "0.3", features = ["axum"] }
figment = { version = "0.10", features = ["toml", "env"] }
futures-util = "0.3"
httpmock = "0.8"
indexmap = { version = "2", features = ["serde"] }
object_store = "0.13"
percent-encoding = "2.3"
predicates = "3"
reqwest = "0.13"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
toml = { version = "1", features = ["preserve_order"] }
tantivy = "0.26.1"
tokio = { version = "1", features = [
  "macros",
  "fs",
  "net",
  "process",
  "rt",
  "rt-multi-thread",
  "time",
] }
tracing = "0.1"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
unicode-segmentation = "1.13.3"
url = "2"
urlencoding = "2"
html-escape = "0.2"
maud = { version = "0.27", features = ["axum"] }
bytes = "1"
camino = { version = "1", features = ["serde1"] }
hex = "0.4"
sha2 = "0.11"
nixfmt_rs = { version = "0.5", default-features = false }
lumis = { version = "0.9", default-features = false, features = [
  "lang-nix",
  "lang-toml",
  "lang-json",
  "lang-bash",
  "lang-fish",
  "lang-ini",
  "lang-yaml",
  "lang-xml",
  "lang-sql",
  "lang-nushell",
] }
comrak = { version = "0.52", default-features = false }
ammonia = "4"

nixsearch-core = { path = "crates/core" }
nixsearch-ingest = { path = "crates/ingest" }
nixsearch-index = { path = "crates/index" }
nixsearch-index-test-support = { path = "crates/index-test-support" }
nixsearch-config = { path = "crates/config" }
nixsearch-store = { path = "crates/store" }
nixsearch-source = { path = "crates/source" }
nixsearch-service = { path = "crates/service" }
nixsearch-web = { path = "crates/web" }
nixsearch-ops = { path = "crates/ops" }
nixsearch-test-support = { path = "crates/test-support" }
