[package]
name = "nix-search"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nix-search-core.workspace = true
nix-search-ingest.workspace = true
nix-search-index.workspace = true
nix-search-config.workspace = true

anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
