[package]
name = "nix-search"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

nix-search-config.workspace = true
nix-search-core.workspace = true
nix-search-index.workspace = true
nix-search-ingest.workspace = true
nix-search-source.workspace = true
nix-search-store.workspace = true
nix-search-web.workspace = true
nix-search-ops.workspace = true

[dev-dependencies]
nix-search-index-test-support.workspace = true
nix-search-test-support.workspace = true

assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
