[package]
name = "nixsearch"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

nixsearch-config.workspace = true
nixsearch-core.workspace = true
nixsearch-index.workspace = true
nixsearch-ingest.workspace = true
nixsearch-source.workspace = true
nixsearch-store.workspace = true
nixsearch-web.workspace = true
nixsearch-ops.workspace = true
nixsearch-service.workspace = true

[dev-dependencies]
nixsearch-index-test-support.workspace = true
nixsearch-test-support.workspace = true

assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
