[package]
name = "nixsearch-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
camino.workspace = true
figment.workspace = true
indexmap.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

nixsearch-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
