[package]
name = "nixsearch-index-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
camino.workspace = true
nixsearch-core.workspace = true
nixsearch-index.workspace = true
nixsearch-test-support.workspace = true
serde_json.workspace = true
time.workspace = true
