[package]
name = "nix-search-index"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nix-search-core.workspace = true

anyhow.workspace = true
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
tantivy.workspace = true
time.workspace = true

[dev-dependencies]
nix-search-test-support.workspace = true
tempfile.workspace = true
