[package]
name = "nixsearch-index"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nixsearch-core.workspace = true

anyhow.workspace = true
camino.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tantivy.workspace = true
time.workspace = true

[dev-dependencies]
nixsearch-test-support.workspace = true
tempfile.workspace = true
