[package]
name = "nixsearch-ops"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
camino.workspace = true
serde_json.workspace = true
tempfile.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true

nixsearch-config.workspace = true
nixsearch-core.workspace = true
nixsearch-index.workspace = true
nixsearch-ingest.workspace = true
nixsearch-source.workspace = true
nixsearch-store.workspace = true

[dev-dependencies]
bytes.workspace = true
nixsearch-index-test-support.workspace = true
nixsearch-test-support.workspace = true
tempfile.workspace = true
