[package]
name = "nix-search-source"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
brotli.workspace = true
bytes.workspace = true
reqwest.workspace = true
tokio.workspace = true

nix-search-core.workspace = true
nix-search-ingest.workspace = true
nix-search-store.workspace = true

[dev-dependencies]
tempfile.workspace = true
