[package]
name = "nixsearch-source"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
brotli.workspace = true
bytes.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true

nixsearch-core.workspace = true
nixsearch-ingest.workspace = true
nixsearch-store.workspace = true

[dev-dependencies]
tempfile.workspace = true
httpmock.workspace = true

nixsearch-test-support.workspace = true
