[package]
name = "nix-search-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
datastar.workspace = true
futures-util.workspace = true
maud.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
url.workspace = true
urlencoding.workspace = true

nix-search-config.workspace = true
nix-search-core.workspace = true
nix-search-index.workspace = true
nix-search-ops.workspace = true

[dev-dependencies]
nix-search-index-test-support.workspace = true
nix-search-test-support.workspace = true
tempfile.workspace = true
