[package]
name = "nixsearch-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
ammonia.workspace = true
axum.workspace = true
camino.workspace = true
comrak.workspace = true
datastar.workspace = true
futures-util.workspace = true
html-escape.workspace = true
lumis.workspace = true
maud.workspace = true
nixfmt_rs.workspace = true
percent-encoding.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
unicode-segmentation.workspace = true
url.workspace = true
urlencoding.workspace = true

nixsearch-config.workspace = true
nixsearch-core.workspace = true
nixsearch-index.workspace = true
nixsearch-ops.workspace = true
nixsearch-service.workspace = true

[dev-dependencies]
nixsearch-index-test-support.workspace = true
nixsearch-test-support.workspace = true
tempfile.workspace = true
tower.workspace = true
